--- a/src/index.css
+++ b/src/index.css
@@ -18,8 +18,9 @@ html, body {
 #root {
   display: flex;
   flex-direction: row;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
+  height: 100dvh;
   overflow: hidden;
 }
 
